--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My 4th repo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
     
     <body>
@@ -25,5 +26,5 @@
             <p>We had a great days.<span>We had a great days.</span>We had a great days. <small>We had a great days.</small> </p>
         </div>
     </body>
-    
+
 </html>
